<resources>
    <string name="app_name">Palarivattom St.John The Baptist Church</string>
    <string name="app_name2">St.John The Baptist Church Palarivattom</string>
    <!--<string name="url" translatable="false">http://192.168.1.107:55/</string>-->
    <string name="url" translatable="false">http://jdadmin-001-site4.itempurl.com/</string>
    <string name="network_off_alert">Please turn on internet</string>
    <string name="ok_button">OK</string>
    <string name="church_name">Church Name</string>
    <string name="about">About</string>
    <string name="view_more">View more</string>
    <string name="priest">Priest</string>
    <string name="priests">Priests</string>
    <string name="name">Name</string>
    <string name="priest_name">Priest Name</string>
    <string name="parish">Parish</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_ordination">Date of Ordination</string>
    <string name="contact">Contact</string>
    <string name="church_address">Church Address</string>
    <string name="phone">Phone</string>
    <string name="view_church_in_map">View Church in map</string>
    <string name="mass_timings">Mass Timings</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="novenas">Novenas</string>
    <string name="search_by_town_church">Search by town/church</string>
    <string name="my_church">My Church</string>
    <string name="notices">Notices</string>
    <string name="events">Events</string>
    <string name="family_units">Family Units</string>
    <string name="gallery">Gallery</string>
    <string name="timings">Timings</string>
    <string name="loading">Loading…</string>
    <string name="novena_dates">%1$s to %2$s</string>
    <string name="pious_org">Pious Org.</string>
    <string name="pious_org_full">Pious Organisations</string>
    <string name="org_name">Organisation Name</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="institutions">Institutions</string>
    <string name="ins_name">Institution Name</string>
    <string name="address">Address</string>
    <string name="general_inform">General Information</string>
    <string name="founder">Founder:</string>
    <string name="founded">Founded:</string>
    <string name="email">Email:</string>
    <string name="mobile_colon">Mobile:</string>
    <string name="phone_colon">Phone:</string>
    <string name="baptismal_name">Baptismal Name</string>
    <string name="designation">Designation</string>
    <string name="status">Status</string>
    <string name="dob">Date of Birth</string>
    <string name="email_id">Email id</string>
    <string name="set_as_mychurch">Set as MyChurch</string>
    <string name="unitexe">Unit Executives</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="set_reminder">Set reminder ⏰</string>
    <string name="old_events">Old events</string>
    <string name="notifications">Notifications</string>
</resources>
