<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_church_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.palarivattomstjohnthebaptistchurch.MyChurchDetails"
    android:background="@drawable/church_bg">
    <TextView
        android:text="@string/my_church"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_head"
        android:layout_margin="15dp"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowRadius="5"
        android:shadowDx="0"
        android:shadowDy="0"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/itemsLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:indicator="BallTrianglePath"
        app:indicator_color="@color/white_patch"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_head">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Timings screen-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timingsLayout"
                android:layout_margin="7dp"
                android:background="@drawable/white_transparent_card"
                android:padding="10dp"
                android:visibility="gone">
                <TextView
                    android:text="@string/mass_timings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/mass_label"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mass_label"
                    android:text="@string/sunday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/sunday_label"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sunday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/sunday_timings"
                    android:layout_below="@id/mass_label"
                    android:layout_toRightOf="@+id/sunday_label"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/sunday_label" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunday_timings"
                    android:text="@string/monday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/monday_label"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Monday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/monday_timings"
                    android:layout_below="@id/sunday_timings"
                    android:layout_toRightOf="@+id/monday_label"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/monday_label" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/monday_timings"
                    android:text="@string/tuesday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/tuesday_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tuesday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/tuesday_timings"
                    android:layout_below="@id/monday_timings"
                    android:layout_toRightOf="@+id/tuesday_label"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/tuesday_label" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tuesday_timings"
                    android:text="@string/wednesday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/wednesday_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wednesday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/wednesday_timings"
                    android:layout_below="@id/tuesday_timings"
                    android:layout_toRightOf="@+id/wednesday_label"
                    android:layout_toEndOf="@+id/wednesday_label"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wednesday_timings"
                    android:text="@string/thursday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/thursday_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Thurday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/thursday_timings"
                    android:layout_below="@id/wednesday_timings"
                    android:layout_toRightOf="@+id/thursday_label"
                    android:layout_toEndOf="@+id/thursday_label"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thursday_timings"
                    android:text="@string/friday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/friday_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Friday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/friday_timings"
                    android:layout_below="@id/thursday_timings"
                    android:layout_toRightOf="@+id/friday_label"
                    android:layout_toEndOf="@+id/friday_label"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/friday_timings"
                    android:text="@string/saturday"
                    android:textColor="@color/primary_text"
                    android:id="@+id/saturday_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Saturday Timings"
                    android:textColor="@color/primary_text"
                    android:id="@+id/saturday_timings"
                    android:layout_below="@id/friday_timings"
                    android:layout_toRightOf="@+id/saturday_label"
                    android:layout_toEndOf="@+id/saturday_label"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:text="@string/novenas"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="7dp"
                    android:layout_marginEnd="7dp"
                    android:textSize="12sp"
                    android:layout_below="@+id/saturday_timings"
                    android:textColor="@color/colorAccent"
                    android:onClick="novenas_click"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
