<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_transparent_card"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:paddingBottom="10dp"
            >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/priest_image"
                    android:src="@drawable/priest"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <!--            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/priest_name_label"
                                android:text="@string/name"
                                android:textSize="12sp"
                                android:textColor="@color/secondary_text"
                                android:layout_toRightOf="@+id/priest_image"
                                android:layout_toEndOf="@+id/priest_image"/>-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priest_name"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:id="@+id/priest_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parish"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_name"
                    android:id="@+id/parish_label" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/parish_label"
                    android:id="@+id/parish"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/baptismal_name"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/parish"
                    android:id="@+id/baptismalname_label" />
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/baptismalname_label"
                    android:id="@+id/baptismalname"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:id="@+id/designation_label"
                    android:layout_below="@+id/parish"
                    android:layout_toRightOf="@+id/baptismalname_label"
                    android:layout_toEndOf="@+id/baptismalname_label"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/designation"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_below="@+id/designation_label"
                    android:layout_toRightOf="@+id/baptismalname"
                    android:layout_toEndOf="@+id/priest_mobile" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/baptismalname"
                    android:id="@+id/priest_status_label" />
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_status_label"
                    android:id="@+id/priest_status"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:id="@+id/date_of_birth_label"
                    android:layout_below="@+id/baptismalname"
                    android:layout_toRightOf="@+id/priest_status_label"
                    android:layout_toEndOf="@+id/priest_status_label"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/date_of_birth"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_below="@+id/date_of_birth_label"
                    android:layout_toRightOf="@+id/priest_status"
                    android:layout_toEndOf="@+id/priest_status" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_status"
                    android:id="@+id/priest_mobile_label" />
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_mobile_label"
                    android:id="@+id/priest_mobile"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_ordination"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:id="@+id/date_of_ordination_label"
                    android:layout_below="@+id/priest_status"
                    android:layout_toRightOf="@+id/priest_mobile_label"
                    android:layout_toEndOf="@+id/priest_mobile_label"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:id="@+id/date_of_ordination"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_below="@+id/date_of_ordination_label"
                    android:layout_toRightOf="@+id/priest_mobile"
                    android:layout_toEndOf="@+id/priest_mobile" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_mobile"
                    android:id="@+id/priest_email_label" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_email_label"
                    android:id="@+id/priest_email"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:id="@+id/priest_address_label"
                    android:layout_below="@+id/priest_email"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_address_label"
                    android:id="@+id/priest_address"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priest_about_label"
                    android:text="@string/about"
                    android:textSize="12sp"
                    android:textColor="@color/secondary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_address"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priest_about"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"
                    android:layout_toRightOf="@+id/priest_image"
                    android:layout_toEndOf="@+id/priest_image"
                    android:layout_below="@+id/priest_about_label"
                    android:ellipsize="end"
                    android:layout_marginBottom="20dp"/>
        </RelativeLayout>

</LinearLayout>
