<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/church_bg"
    tools:context="com.tech.thrithvam.palarivattomstjohnthebaptistchurch.EventDetails">

    <TextView
        android:text="@string/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_event_head"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowRadius="5"
        android:shadowDx="0"
        android:shadowDy="0"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_scrollview"
        android:layout_below="@+id/activity_event_head"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/event_img"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true" />

                 <TextView
                     android:text="Date"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/event_date"
                     android:textSize="18sp"
                     android:textColor="@android:color/white"
                     android:layout_below="@+id/event_img"
                     android:maxLines="1"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventsLayout"
                android:layout_below="@+id/event_date"
                android:layout_margin="7dp"
                android:background="@drawable/white_transparent_card"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:id="@+id/event_details"
                    android:textColor="@color/primary_text"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder"
                    android:textColor="@color/colorAccent"
                    android:layout_below="@id/event_details"
                    android:id="@+id/set_reminder"
                    android:padding="5dp"
                    android:gravity="right"
                    />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
