<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pious_org_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/church_bg"
    tools:context="com.tech.thrithvam.palarivattomstjohnthebaptistchurch.PiousOrgDetails">

    <TextView
        android:text="@string/org_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/activity_head"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        android:textColor="@android:color/white"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_scrollview"
        android:layout_below="@+id/activity_head"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:maxHeight="200dp"
                android:id="@+id/patron_img"
                android:scaleType="fitCenter"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/priest"
                android:adjustViewBounds="true"/>

            <TextView
                android:text="Patron Name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patron_name"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_below="@+id/patron_img"
                android:maxLines="1"/>
       <!--     <TextView
                android:text="Town"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Parton_Name"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_below="@+id/Parton_image"
                android:maxLines="1"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aboutLayout"
                android:layout_below="@+id/patron_name"
                android:layout_margin="7dp"
                android:background="@drawable/white_transparent_card"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:layout_marginTop="5dp"
                    android:id="@+id/history_label"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:id="@+id/history_details"
                    android:layout_below="@id/history_label"
                    android:textColor="@color/primary_text"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:ellipsize="end"/>

            </RelativeLayout>

        </RelativeLayout>



    </ScrollView>




</RelativeLayout>
